<resources>
    <string name="app_name">Cabs</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Register</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Log in here</string>
    <string name="not_registered_sign_up_here">Not Registered ? Register here..</string>
    <string name="LoginButton">Log In</string>
    <string name="todo">TODO</string>
    <string name="cab">Cab</string>
    <string name="title_activity_maps">Maps</string>
    <string name="todo1">TODO1</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">invalid latlng</string>
    <string name="no_address_found">no address</string>
    <string name="address_found">found</string>
    <string name="update_button">u</string>
    <string name="rideid">RideId</string>


</resources>
